[gd_scene load_steps=3 format=3 uid="uid://bho251jfd673i"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_5dg6x"]
[ext_resource type="AudioStream" uid="uid://buhr7prl4yr74" path="res://assets/audio/sfx/bop.mp3" id="2_ofx1n"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_5dg6x")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0

[node name="Bop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ofx1n")

[node name="Center" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -62.5
offset_right = 46.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Center"]
layout_mode = 2

[node name="Continue" type="Button" parent="Center/Buttons"]
layout_mode = 2
disabled = true
text = "Continue"
flat = true

[node name="NewGame" type="Button" parent="Center/Buttons"]
layout_mode = 2
text = "New Game"
flat = true

[node name="Credits" type="Button" parent="Center/Buttons"]
layout_mode = 2
text = "Credits"
flat = true

[node name="Options" type="Button" parent="Center/Buttons"]
layout_mode = 2
text = "Options"
flat = true

[node name="ExitGame" type="Button" parent="Center/Buttons"]
layout_mode = 2
text = "Exit Game"
flat = true

[node name="Options" type="VBoxContainer" parent="Center"]
visible = false
layout_mode = 2

[node name="Close" type="Button" parent="Center/Options"]
layout_mode = 2
text = "Close"

[node name="Credits" type="VBoxContainer" parent="Center"]
visible = false
layout_mode = 2

[node name="Close" type="Button" parent="Center/Credits"]
layout_mode = 2
text = "Close"

[connection signal="mouse_entered" from="Center/Buttons/Continue" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Center/Buttons/NewGame" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Buttons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="Center/Buttons/Credits" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="Center/Buttons/Options" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Center/Buttons/ExitGame" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Center/Buttons/ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="mouse_entered" from="Center/Options/Close" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Center/Credits/Close" to="." method="_on_mouse_entered"]
